@@ -1,0 +1,40 @@
+#include <stdbool.h>
+#include <stdio.h>
+#include <stdlib.h>
+#include <string.h>
+#include <mosquitto.h>
+
+static int run = -1;
+
+void on_connect(struct mosquitto *mosq, void *obj, int rc)
+{
+	if(rc){
+		printf("Connect error: %d\n", rc);
+		exit(1);
+	}
+}
+
+int main(int argc, char *argv[])
+{
+	int rc;
+	struct mosquitto *mosq;
+
+	int port = atoi(argv[1]);
+
+	mosquitto_lib_init();
+
+	mosq = mosquitto_new("publish-qos2-test", true, &run);
+	mosquitto_connect_callback_set(mosq, on_connect);
+
+	rc = mosquitto_connect(mosq, "localhost", port, 5);
+
+	while(run == -1){
+		rc = mosquitto_loop(mosq, 300, 1);
+		if(rc){
+			exit(0);
+		}
+	}
+
+	mosquitto_lib_cleanup();
+	return 0;
+}
